# VanillaHelpers64

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CLAUDE.md  README.md  mingw-i686-toolchain.cmake  offsets.ini.example  run-tidy.sh
.github/workflows/: build.yml
TextureServer64/: CMakeLists.txt  build_test.bat
TextureServer64/client/: CMakeLists.txt
TextureServer64/client/src/: TexClient.cpp  TexClient.h  WorkingSet.cpp  WorkingSet.h
TextureServer64/server/: CMakeLists.txt
TextureServer64/server/src/: BlpDecoder.cpp  BlpDecoder.h  LruCache.h  Server.cpp  Server.h  ServerLog.h  SharedMemory.cpp  SharedMemory.h  TgaDecoder.cpp  TgaDecoder.h  ThreadPool.cpp  ThreadPool.h  WinHandle.h  main.cpp
TextureServer64/server/tests/: test_blp_decoder.cpp  test_protocol.cpp  test_shared_memory.cpp  test_tga_decoder.cpp  test_thread_pool.cpp
TextureServer64/shared/: Protocol.h
VanillaHelpers/: CMakeLists.txt  README.md
VanillaHelpers/src/: Allocator.cpp  Allocator.h  Blips.cpp  Common.cpp  Common.h  DllMain.cpp  FileIO.cpp  Game.cpp  Game.h  Morph.cpp  Offsets.cpp  Offsets.h  TexBridge.cpp  TexBridge.h  Texture.cpp  Texture.h
VanillaHelpers/src/unused/: GameUnused.cpp  GameUnused.h
src/: DllMain.cpp  Game.h
